--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a ng-href="#/search">Open Search</a>
     <div>
 
-        <select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMob_users" ng-change="changeToUser()">Select a User</select>
+        <select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users" ng-change="changeToUser()">Select a User</select>
 
     </div>
 
