--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>My Final Project</title>
+    <title>GamerMob</title>
 </head>
 <body ng-controller="MainController">
     <header>
