added a developer page and dropped old table

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li role="presentation" ><a ng-href="#/signup">Sign Up</a></li>
                 <li role="presentation"><a ng-href="#/userHome">User Home</a></li>
                 <li role="presentation"><a ng-href="#/search">Open Search</a></li>
+                <li role="presentation"><a ng-href="#/developer">Developer Page</a></li>
                 <p class="navbar-text navbar-right">Signed in as {{selectedUser.user_id}}</p>
             </ul>
         </nav>
