--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <!--UI Grid-->
     <!--<link rel="styleSheet" href="bower_components/angular-ui-grid/ui-grid.css"/>-->
-    <!--<link rel="stylesheet" href="Styles/styles.css">-->
+    <link href="Styles/styles.css" rel="stylesheet">
     <title>GamerMob</title>
 </head>
 <body ng-controller="MainController">
-    <header>
+    <header class="header">
     <h1>GamerMob</h1>
 
         <nav class="navbar navbar-default" role="navigation">
@@ -29,7 +29,7 @@
 
     </div>
     </header>
-    <div ui-view>
+    <div class="full" ui-view>
 
     </div>
 
