--- a/index.html
+++ b/index.html
@@ -3,48 +3,46 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!--UI Grid-->
     <!--<link rel="styleSheet" href="bower_components/angular-ui-grid/ui-grid.css"/>-->
     <link href="Styles/styles.css" rel="stylesheet">
     <title>GamerMob</title>
 </head>
-<body ng-controller="MainController">
-    <header class="header">
-    <h1>GamerMob</h1>
+<body class="full-dev" ng-controller="MainController">
 
-        <nav class="navbar navbar-default" role="navigation">
-            <ul class="nav navbar-nav">
-                <li role="presentation" ><a ng-href='#/'>Main</a></li>
-                <li role="presentation" ><a ng-href="#/signup">Sign Up</a></li>
+        <!--Nav bar and buttons-->
+        <nav>
+            <ul class="nav nav-tabs">
+                <li role="presentation"><a ng-href='#/'>Main</a></li>
+                <li role="presentation"><a ng-href="#/signup">Sign Up</a></li>
                 <li role="presentation"><a ng-href="#/userHome">User Home</a></li>
                 <li role="presentation"><a ng-href="#/search">Open Search</a></li>
                 <li role="presentation"><a ng-href="#/developer">Developer Page</a></li>
-                <p class="navbar-text navbar-right">Signed in as {{selectedUser.user_id}}</p>
             </ul>
         </nav>
-        <div>
 
+    <div ui-view></div>
 
-    </div>
-    </header>
-    <div class="full" ui-view>
-
-    </div>
 
     <select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users">
 
 
     </select>
     <button ng-focus="getListofUsers()">Refresh Users</button>
+        </div>
 
 
 
 
     <!-- Angular JS -->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
+    <!--Angular Animate-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-animate.min.js"></script>
     <!-- jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--Firebase and AngularFire-->
