added better CSS to home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="full-dev" ng-controller="MainController">
 
         <!--Nav bar and buttons-->
-        <nav>
+        <nav class="navbar navbar-right navbar-fixed-top">
             <ul class="nav nav-tabs">
                 <li role="presentation"><a ng-href='#/'>Main</a></li>
                 <li role="presentation"><a ng-href="#/signup">Sign Up</a></li>
@@ -39,10 +39,10 @@
 
 
     <!-- Angular JS -->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js'></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
     <!--Angular Animate-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular-animate.min.js"></script>
     <!-- jQuery  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--Firebase and AngularFire-->
