--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" ng-href="/#/">GameMob</a>
+                    <a class="navbar-brand" ng-href="/#/">GamerMob</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,7 +59,7 @@
 
     <!-- Angular JS -->
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js'></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
     <!--Angular Animate-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular-animate.min.js"></script>
     <!-- jQuery  -->
@@ -68,7 +68,7 @@
     <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
     <script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
     <!--BootStrap-->
-    <script src="dist/js/bootstrap.min.js"></script>
+    <!--<script src="dist/js/bootstrap.min.js"></script>-->
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <!--UI Grid-->
 
