--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="shortcut icon" href="favicon.ico" />
     <!-- Bootstrap -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
     <!--Hover -->
@@ -19,40 +19,38 @@
 
         <!--Nav bar and buttons-->
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <a class="navbar-brand hvr-shutter-out-vertical " href="/#/">GamerMob</a>
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" ng-href="/#/">GamerMob</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav myNav">
+                    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
                         <li class="hvr-shutter-out-vertical "><a ng-href="#/userHome">User Home <span class="sr-only">(current)</span></a></li>
                         <li class="hvr-shutter-out-vertical "><a ng-href="#/search">Open Search</a></li>
                         <li class="hvr-shutter-out-vertical "><a ng-href="#/developer">Developer Page</a> </li>
                     </ul>
-                </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
 
     <div ui-view></div>
 
 
-    <select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users">
+    <!--<select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users">-->
 
 
-    </select>
+    <!--</select>-->
 
-    <button ng-focus="getListofUsers()">Refresh Users</button>
-        </div>
+    <!--<button ng-focus="getListofUsers()">Refresh Users</button>-->
+        <!--</div>-->
 
 
 
@@ -68,7 +66,7 @@
     <script src='https://cdn.firebase.com/js/client/1.1.1/firebase.js'></script>
     <script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
     <!--BootStrap-->
-    <!--<script src="dist/js/bootstrap.min.js"></script>-->
+    <script src="dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <!--UI Grid-->
 
