fixed server and button on navbar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                     <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-                        <li class="hvr-shutter-out-vertical "><a ng-href="#/userHome">User Home <span class="sr-only">(current)</span></a></li>
+                        <li class="hvr-shutter-out-vertical "><a ng-href="#/userHome">Create Session <span class="sr-only">(current)</span></a></li>
                         <li class="hvr-shutter-out-vertical "><a ng-href="#/search">Open Search</a></li>
                         <li class="hvr-shutter-out-vertical "><a ng-href="#/developer">Developer Page</a> </li>
                     </ul>
