latest commit fixing server

--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <!--Hover -->
     <link href="bower_components/Hover/css/hover-min.css" rel="stylesheet">
 
-    <!--UI Grid-->
-    <link href="bower_components/angular-ui-grid/ui-grid.css" rel="stylesheet">
-
+    <!--My CSS -->
     <link href="Styles/styles.css" rel="stylesheet">
     <title>GamerMob</title>
 </head>
 <body class="full-dev" ng-controller="MainController">
-
         <!--Nav bar and buttons-->
 
         <nav class="navbar navbar-inverse">
@@ -67,10 +64,8 @@
     <script src='https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js'></script>
     <!--BootStrap-->
     <script src="dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <!--UI Grid-->
-
-    <script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
     <script src="public/app/app.js"></script>
     <script src="public/controllers/MainController.js"></script>
@@ -78,6 +73,7 @@
     <script src="public/controllers/DateController.js"></script>
     <script src="public/controllers/TimeController.js"></script>
     <script src="public/controllers/gridController.js"></script>
+    <script src="public/controllers/searchController.js"></script>
 
 
 </body>
