--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
     <div ui-view></div>
 
 
-    <!--<select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users">-->
+    <select name="GameMobUsers" ng-model="selectedUser" ng-options="user.user_id for user in gameMobtest_users">
 
 
-    <!--</select>-->
+    </select>
 
-    <!--<button ng-focus="getListofUsers()">Refresh Users</button>-->
-        <!--</div>-->
+    <button ng-focus="getListofUsers()">Refresh Users</button>
+        </div>
 
 
 
 
     <!-- Angular JS -->
-    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.11/angular-ui-router.min.js"></script>
     <!--Angular Animate-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular-animate.min.js"></script>
